--- a/bayes_theorem.ipynb
+++ b/bayes_theorem.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Bayes Theorem\n",
     "\n",
-    "![Bayes Theorm](https://imgur.com/xHDZJT5.jpg)\n",
+    "![Bayes Theorm](bayes.png)\n",
     "\n",
     "<a href=\"https://towardsdatascience.com/bayes-rule-with-a-simple-and-practical-example-2bce3d0f4ad0\"> Image courtesy of Tirthajyoti Sarkar</a>\n",
     "\n",
